--- a/src/pages/util/card.css
+++ b/src/pages/util/card.css
@@ -4,8 +4,13 @@
 	margin: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 .header-text {
+	height: 18px;
+	margin: auto;
+	padding-bottom: 25px;
 	color: #6a1f82;
+	display: inline-block;
 }
