--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,9 +1,8 @@
 body {
   color: #000807;
-  margin-top: 0px;
-  margin-left: 5%;
-  margin-right: 5%;
-  font-family: Georgia, serif;
+  margin: 0px 0px 0px 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   text-transform: uppercase;
   text-align: center;
 }
