--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,11 +7,8 @@
 }
 
 .home-page {
-	max-height: 1200px;
-	max-width: 800px;
 	position: relative;
-	margin: auto;
-	margin-top: 10px;
+	margin: 0px 0px 0px 0px;
 }
 
 .home-image {
