--- a/src/pages/util/slideshow.css
+++ b/src/pages/util/slideshow.css
@@ -9,14 +9,21 @@
   width: 100%;
 }
 
+.arrows {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  position: absolute;
+  top: 125px;
+}
+
 .prev, .next {
 	display: inline-block;
   cursor: pointer;
-  position: relative;
-  top: 0;
   width: auto;
   color: black;
   padding: 15px;
+  padding-bottom: 14px;
   font-size: 20px;
   margin-bottom: 10px;
   transition: 0.6s ease;
